Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -638,14 +638,11 @@
     }
    ],
    "source": [
-    "trace_florida={'name':'donald trump','type':'bar','x':['Florida','New York'],\n",
-    "               'y':[republicans['florida'],republicans['new york']],'markers':{'colors':'rgba(255,0,0,0.9)'}}\n",
+    "pie_trace = dict(type=\"pie\", labels=[\"chocolate\", \"vanilla\", \"strawberry\"], values=[10, 5, 15])\n",
     "\n",
-    "\n",
-    "trace_new_york={'name':'hillary clinton','type':'bar','x':['Florida','New York'],\n",
-    "               'y':[democrats['florida'],democrats['new york']]}\n",
-    "plotly.offline.iplot([trace_florida,trace_new_york])\n",
-    "\n",
+    "plotly.offline.iplot([\n",
+    "    pie_trace\n",
+    "])\n",
     "                                                                                              \n",
     "                                                                                              \n",
     "                                                                                              \n",
