Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -688,7 +688,10 @@
    "source": [
     "trace_of_data = {'x': [1.5, 2.5, 3.5, 4.5], 'y': [3, 5, 7, 9], \n",
     "                 'marker': {'color': 'blue'},\n",
-    "                 'name': 'Our nice line'}"
+    "                 'name': 'Our nice line'}\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
