Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -691,7 +691,7 @@
     "                 'name': 'Our nice line'}\n",
     "\n",
     "\n",
-    "\n"
+    "plotly.offline.iplot(trace_of_data)\n"
    ]
   },
   {
