Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -682,16 +682,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "marker": {
+          "color": "blue"
+         },
+         "name": "Our nice line",
+         "type": "scatter",
+         "uid": "5acf10a0-0968-11e9-b217-73a26f723a9c",
+         "x": [
+          1.5,
+          2.5,
+          3.5,
+          4.5
+         ],
+         "y": [
+          3,
+          5,
+          7,
+          9
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"4c8257bf-9c17-463a-9634-6b383d380dde\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"4c8257bf-9c17-463a-9634-6b383d380dde\", [{\"marker\": {\"color\": \"blue\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"5ad47176-0968-11e9-b217-73a26f723a9c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"4c8257bf-9c17-463a-9634-6b383d380dde\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"4c8257bf-9c17-463a-9634-6b383d380dde\", [{\"marker\": {\"color\": \"blue\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"5ad47176-0968-11e9-b217-73a26f723a9c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "trace_of_data = {'x': [1.5, 2.5, 3.5, 4.5], 'y': [3, 5, 7, 9], \n",
-    "                 'marker': {'color': 'blue'},\n",
+    "                 'marker': {'color': ''},\n",
     "                 'name': 'Our nice line'}\n",
     "\n",
     "\n",
-    "plotly.offline.iplot(trace_of_data)\n"
+    "plotly.offline.iplot([trace_of_data])\n"
    ]
   },
   {
