Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -691,11 +691,11 @@
        "data": [
         {
          "marker": {
-          "color": "blue"
+          "color": "pink"
          },
          "name": "Our nice line",
          "type": "scatter",
-         "uid": "5acf10a0-0968-11e9-b217-73a26f723a9c",
+         "uid": "5f820828-0968-11e9-b217-73a26f723a9c",
          "x": [
           1.5,
           2.5,
@@ -713,10 +713,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"4c8257bf-9c17-463a-9634-6b383d380dde\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"4c8257bf-9c17-463a-9634-6b383d380dde\", [{\"marker\": {\"color\": \"blue\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"5ad47176-0968-11e9-b217-73a26f723a9c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"4f8d069e-c623-43f0-89e6-d96aff60a720\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"4f8d069e-c623-43f0-89e6-d96aff60a720\", [{\"marker\": {\"color\": \"pink\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"5f8629da-0968-11e9-b217-73a26f723a9c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"4c8257bf-9c17-463a-9634-6b383d380dde\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"4c8257bf-9c17-463a-9634-6b383d380dde\", [{\"marker\": {\"color\": \"blue\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"5ad47176-0968-11e9-b217-73a26f723a9c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"4f8d069e-c623-43f0-89e6-d96aff60a720\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"4f8d069e-c623-43f0-89e6-d96aff60a720\", [{\"marker\": {\"color\": \"pink\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"5f8629da-0968-11e9-b217-73a26f723a9c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
