Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -725,7 +725,7 @@
    ],
    "source": [
     "trace_of_data = {'x': [1.5, 2.5, 3.5, 4.5], 'y': [3, 5, 7, 9], \n",
-    "                 'marker': {'color': 'sky blue'},\n",
+    "                 'marker': {'color': ''},\n",
     "                 'name': 'Our nice line'}\n",
     "\n",
     "\n",
