--- a/index.ipynb
+++ b/index.ipynb
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -691,11 +691,11 @@
        "data": [
         {
          "marker": {
-          "color": "sky blue"
+          "color": "silver"
          },
          "name": "Our nice line",
          "type": "scatter",
-         "uid": "6dd5fd9e-0968-11e9-b217-73a26f723a9c",
+         "uid": "7b222856-0968-11e9-b217-73a26f723a9c",
          "x": [
           1.5,
           2.5,
@@ -713,10 +713,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"11d49e6f-06be-4e3c-8ee7-ae532e546321\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"11d49e6f-06be-4e3c-8ee7-ae532e546321\", [{\"marker\": {\"color\": \"sky blue\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"6dda4886-0968-11e9-b217-73a26f723a9c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"da08f5b2-c84d-4899-8caa-d3d5b0ef69be\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"da08f5b2-c84d-4899-8caa-d3d5b0ef69be\", [{\"marker\": {\"color\": \"silver\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"7b2634c8-0968-11e9-b217-73a26f723a9c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"11d49e6f-06be-4e3c-8ee7-ae532e546321\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"11d49e6f-06be-4e3c-8ee7-ae532e546321\", [{\"marker\": {\"color\": \"sky blue\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"6dda4886-0968-11e9-b217-73a26f723a9c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"da08f5b2-c84d-4899-8caa-d3d5b0ef69be\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"da08f5b2-c84d-4899-8caa-d3d5b0ef69be\", [{\"marker\": {\"color\": \"silver\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"7b2634c8-0968-11e9-b217-73a26f723a9c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -725,7 +725,7 @@
    ],
    "source": [
     "trace_of_data = {'x': [1.5, 2.5, 3.5, 4.5], 'y': [3, 5, 7, 9], \n",
-    "                 'marker': {'color': ''},\n",
+    "                 'marker': {'color': 'silver'},\n",
     "                 'name': 'Our nice line'}\n",
     "\n",
     "\n",
