Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -691,11 +691,11 @@
        "data": [
         {
          "marker": {
-          "color": "gold"
+          "color": "aquamarine"
          },
          "name": "Our nice line",
          "type": "scatter",
-         "uid": "7e10ea84-0968-11e9-b217-73a26f723a9c",
+         "uid": "843fa558-0968-11e9-b217-73a26f723a9c",
          "x": [
           1.5,
           2.5,
@@ -713,10 +713,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"bbe120df-0cda-4b2d-a585-e4ac92ebd568\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"bbe120df-0cda-4b2d-a585-e4ac92ebd568\", [{\"marker\": {\"color\": \"gold\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"7e150f88-0968-11e9-b217-73a26f723a9c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"71468c5e-d131-4833-a3df-23cd661f08bd\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"71468c5e-d131-4833-a3df-23cd661f08bd\", [{\"marker\": {\"color\": \"aquamarine\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"84436bde-0968-11e9-b217-73a26f723a9c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"bbe120df-0cda-4b2d-a585-e4ac92ebd568\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"bbe120df-0cda-4b2d-a585-e4ac92ebd568\", [{\"marker\": {\"color\": \"gold\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"7e150f88-0968-11e9-b217-73a26f723a9c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"71468c5e-d131-4833-a3df-23cd661f08bd\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"71468c5e-d131-4833-a3df-23cd661f08bd\", [{\"marker\": {\"color\": \"aquamarine\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"84436bde-0968-11e9-b217-73a26f723a9c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -725,7 +725,7 @@
    ],
    "source": [
     "trace_of_data = {'x': [1.5, 2.5, 3.5, 4.5], 'y': [3, 5, 7, 9], \n",
-    "                 'marker': {'color': 'g'},\n",
+    "                 'marker': {'color': 'aquamarine'},\n",
     "                 'name': 'Our nice line'}\n",
     "\n",
     "\n",
